--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -75,7 +75,7 @@
         app:srcCompat="@drawable/next_selector" />
 
     <ImageButton
-        android:id="@+id/shuffle"
+        android:id="@+id/playback_mode_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:adjustViewBounds="true"
@@ -86,7 +86,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/edit_info"
         app:layout_constraintEnd_toStartOf="@+id/edit_info"
         app:layout_constraintTop_toTopOf="@+id/edit_info"
-        app:srcCompat="@drawable/shuffle_icon_off" />
+        app:srcCompat="@drawable/normal_playback_icon" />
 
     <ImageButton
         android:id="@+id/repeat"
