--- a/app/src/main/res/layout/queue_bottomsheet.xml
+++ b/app/src/main/res/layout/queue_bottomsheet.xml
@@ -16,28 +16,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/shuffle_queue"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@android:color/transparent"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/shuffle_icon_off" />
-
-        <TextView
-            android:id="@+id/ShuffleName"
+        <LinearLayout
+            android:id="@+id/LinearLayout_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="0dp"
-            android:layout_toEndOf="@+id/shuffle_queue"
-            android:text="Shuffle"
-            android:textColor="@color/colorBlack"
-            android:textSize="25sp" />
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true">
 
+            <ImageButton
+                android:id="@+id/shuffle_queue"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/shuffle_icon_off" />
+
+            <TextView
+                android:id="@+id/ShuffleName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Shuffle"
+                android:layout_gravity="center"
+                android:textColor="@color/colorBlack"
+                android:textSize="25sp" />
+
+        </LinearLayout>
         <ImageButton
             android:id="@+id/delete_queue"
             android:layout_width="50dp"
@@ -86,10 +92,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
