--- a/app/src/main/res/layout/add_playlist_cardview.xml
+++ b/app/src/main/res/layout/add_playlist_cardview.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardUseCompatPadding="true"
     app:cardPreventCornerOverlap="true">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/addedPlaylistLinearLayout"
@@ -47,7 +45,5 @@
                 />
         </LinearLayout>
 
-
-    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
