--- a/app/src/main/res/menu/player_menu.xml
+++ b/app/src/main/res/menu/player_menu.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
-        <item android:title="Go to"
-            android:id="@+id/go_to">
-            <menu>
-                <item android:title="Playlist"
-                    android:id="@+id/playlist_i"></item>
-                <item android:title="Album"
-                    android:id="@+id/album"></item>
-            </menu>
-        </item>
 
         <item android:title="Delete"
             android:icon="@drawable/delete_icon"
-            android:id="@+id/delete"></item>
+            android:id="@+id/delete"
+            ></item>
 
         <item android:title="Share"
             android:icon="@drawable/share_icon"
